alterado nome da pasta e deletado imagem umidificador

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> RM Umidificadores </title>
+    <link rel="stylesheet" href="style.css">
+    <title> Ladrimar </title>
     <link rel="stylesheet" type="text/css" href="./style.css">
+
+    <link rel="shortcut icon" href="./#.cc"> <!-- icone na barra de endereço  -->
+    <link rel="apple-touch-icon" href="./#.png">
     <script defer type="text/javascript" src="index.js"></script>
 
 </head>
 
 <body>
     <header>
-        <img src="./umidificador.webp" alt="Lua USB e LED 3 cores">
     </header>
     <section>
         <nav>
-
+            <ul>
+                <li><a href="#initial"></a>Home</li>
+                <li><a href="#Sobre"></a>Sobre Nós</li>
+                <li><a href="#Contatos"></a>Tenho Interesse</li>
+            </ul>
         </nav>
         <article>
             <br><h1><b>Como usar umidificador de ar?</b></h1>
